force-app/main/default/objects/Diab_Launch_Page__c/Diab_Launch_Page__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Launch Page</label>
</CustomObject>