force-app/main/default/objects/Diab_Launch_Page__c/fields/SDoc_PDF_Template__c.field-meta.xml
<CustomField>
    <fullName>SDoc_PDF_Template__c</fullName>
    <label>SDoc PDF Template</label>
    <length>40</length>
    <type>Text</type>
</CustomField>