force-app/main/default/objects/Diab_Launch_Page__c/fields/Youreka_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Youreka_Template_Id__c</fullName>
    <label>Youreka Template Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>